--- a/bring_u/templates/base.html
+++ b/bring_u/templates/base.html
@@ -10,7 +10,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container d-flex">
-                <a class="navbar-brand" href="/">BRING-U</a>
+                <a class="navbar-brand pr-4 logo" href="/"><img src="/media/logo.png" alt="" height="48px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
