--- a/bring_u/templates/base.html
+++ b/bring_u/templates/base.html
@@ -23,6 +23,9 @@
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/chat">Chat</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/request"> Request</a>
                             <!--<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Services
