--- a/bring_u/templates/addmenu.html
+++ b/bring_u/templates/addmenu.html
@@ -128,7 +128,7 @@
 </head>
 <body>
     <main class="page">
-    	<h2>Upload ,Crop and save.</h2>
+    	<h2>Sube la foto del menu de tu restaurante!</h2>
     	<!-- input file -->
     	<div class="box">
             <form action="" method="POST" id="crop-form">
@@ -150,7 +150,7 @@
     	<div class="box">
     		<div class="options hide">
     			<label> Width</label>
-    			<input type="number" class="img-w" value="640" min="100" max="1920" />
+    			<input type="number" class="img-w" value="1280" min="320" max="1920" />
     		</div>
     		<!-- save btn -->
     		<button class="btn save hide">Save</button>
